# Django-tutorial

./: Makefile  README.md  README.rst  pyproject.toml
core/core/utils/: collections.py
core/project/: models.py  urls.py
core/project/settings/: __init__.py  base.py  docker.py  envvars.py
core/project/settings/templates/: setting.dev.py
